<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_login"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context="com.example.dtcs.Activity_Login"
    android:background="#ECEDF1">


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/Login_DTCS"
        android:text="@string/Login_DTCS"
        android:textSize="36sp"
        android:textColor="@color/colorFonts"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"

        android:layout_marginTop="72dp"/>


    <Button
       android:id="@+id/Bt_Login"
       android:layout_width="match_parent"
       android:text="@string/Login_Buttonlog"
       android:textColor="#fff"
       android:textSize="18sp"
       android:layout_height="40dp"
       android:layout_marginLeft="30dp"
       android:background="@drawable/editview_rounded"
       android:layout_centerVertical="true"
       android:layout_centerHorizontal="true"
       style="?android:attr/borderlessButtonStyle"
     />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_apply"
        android:textColor="@color/colorFonts"
        android:layout_below="@+id/Bt_Login"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="12dp"
        android:id="@+id/TV_Apply" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_Forgetword"
        android:textColor="@color/colorFonts"
        android:layout_below="@+id/Bt_Login"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:id="@+id/TV_Forgetword" />

    <TextView
        android:id="@+id/Login_Datatomato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_Datatomato"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#fff"
        android:layout_alignTop="@+id/Login_Account"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView2" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#fff"
        android:id="@+id/imageView"
        android:layout_alignTop="@+id/Login_Wrod"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/Login_Account"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:hint="@string/Login_account"
        android:background="#fff"
        android:maxLines="9"
        android:layout_marginTop="66dp"
        android:layout_marginLeft="12dp"
        android:layout_alignTop="@+id/Login_DTCS"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/Login_Wrod"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#fff"
        android:hint="@string/Login_word"
        android:password="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="12dp"
        android:layout_below="@+id/Login_Account"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLines="12"/>



</RelativeLayout>
