<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#fff">

        <ImageView
            android:id="@+id/IV_tab02Return01"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/linear_record_historylist"
            android:src="@mipmap/return_arrows"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Tool_DownloadFile"
            android:textColor="#000"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/TV_fileloadup"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:text="@string/menu_uploading"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            />
    </LinearLayout>


    <ListView
        android:id="@+id/LV_DownloadFileListView"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent">

    </ListView>
<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="7.8"
    android:gravity="center"
    android:textColor="@color/colorGrayFonts"
    android:layout_marginBottom="2dp"
    android:text="@string/view_path"
    />

</LinearLayout>
