<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#fff">

        <ImageView
            android:id="@+id/IV_tab02Return3_2_2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/linear_record_historylist"
            android:src="@mipmap/return_arrows"
            android:descendantFocusability="blocksDescendants"
            />

        <TextView
            android:id="@+id/TV_DownloadTitleView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/view_safeCheck"
            android:textColor="#000"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/TV_safeUpdataSubmit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:text="提交"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#fff"
        android:gravity="center">
        <TextView
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_power"
            android:gravity="center"
            android:textSize="21sp"
            android:textColor="#000"
            />

        <Spinner

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_power" />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/grayWire"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#fff"
        android:gravity="center">
        <TextView
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_tableChair"
            android:gravity="center"
            android:textSize="21sp"
            android:textColor="#000"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_tableChair" />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/grayWire"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#fff"
        android:gravity="center">

        <TextView
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_computer"
            android:gravity="center"
            android:textSize="21sp"
            android:textColor="#000"
            android:id="@+id/textView11" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_computer" />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/grayWire"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#fff"
        android:gravity="center">
        <TextView
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_keyMap"
            android:gravity="center"
            android:textSize="21sp"
            android:textColor="#000"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_keyMap" />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/grayWire"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#fff"
        android:gravity="center">
        <TextView
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_airConditioner"
            android:gravity="center"
            android:textSize="21sp"
            android:textColor="#000"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_airConditioner" />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/grayWire"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#fff"
        android:gravity="center">

        <TextView
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_sanitation"
            android:gravity="center"
            android:textSize="21sp"
            android:textColor="#000"
            android:id="@+id/textView12" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_sanitation" />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/grayWire"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#fff"
        android:gravity="center">

        <TextView
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_mainSwitch"
            android:gravity="center"
            android:textSize="21sp"
            android:textColor="#000"
            android:id="@+id/textView9" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_mainSwitch" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.925"
        android:background="#fff"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="签名:"
            android:gravity="center|right"
            android:textSize="22sp"
            android:textColor="#000"
            />
        <EditText
            android:id="@+id/ET_safeUpdataName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=" 张燕花"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            />


    </LinearLayout>


</LinearLayout>
